[gd_scene load_steps=5 format=3 uid="uid://lysrnk033b8v"]

[ext_resource type="Script" uid="uid://csl8qcwcrq6i1" path="res://desktop/window/test_window/test_window.gd" id="1_cxhuy"]
[ext_resource type="PackedScene" uid="uid://b24nf7m03xv4b" path="res://desktop/window/juice_pivot/juice_pivot.tscn" id="2_712ap"]
[ext_resource type="PackedScene" uid="uid://bx3qmlit7do7s" path="res://desktop/window/window_bar/window_bar.tscn" id="2_y4nv2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxhuy"]
bg_color = Color(0, 0, 0, 1)

[node name="TestWindow" type="ReferenceRect" node_paths=PackedStringArray("window_bar")]
offset_right = 419.0
offset_bottom = 299.0
script = ExtResource("1_cxhuy")
window_bar = NodePath("JuicePivot/BgPanelContainer/VerticalSplit/WindowBar")

[node name="JuicePivot" parent="." instance=ExtResource("2_712ap")]
layout_mode = 1

[node name="BgPanelContainer" type="PanelContainer" parent="JuicePivot"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -209.5
offset_top = -149.5
offset_right = 209.5
offset_bottom = 149.5
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_cxhuy")

[node name="VerticalSplit" type="VBoxContainer" parent="JuicePivot/BgPanelContainer"]
layout_mode = 2

[node name="WindowBar" parent="JuicePivot/BgPanelContainer/VerticalSplit" instance=ExtResource("2_y4nv2")]
unique_name_in_owner = true
layout_mode = 2

[node name="WindowContent" type="MarginContainer" parent="JuicePivot/BgPanelContainer/VerticalSplit"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="JuicePivot/BgPanelContainer/VerticalSplit/WindowContent"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "Hello world!"
fit_content = true
